# hotspot_hub

./: .gitignore  Cargo.toml  build.rs
.cargo/: config.toml
docs/implementation/: manual-verification.md
docs/superpowers/plans/: 2026-06-16-hotspot-hub-mvp-implementation.md
docs/superpowers/specs/: 2026-06-16-hotspot-hub-mvp-design.md
src/: connected_devices.rs  format.rs  lib.rs  main.rs  model.rs  monitor.rs  reducer.rs  ring_buffer.rs  sources.rs
src/platform/: android.rs  desktop.rs  mod.rs
tests/: connected_devices_test.rs  format_test.rs  reducer_test.rs  ring_buffer_test.rs  ui_copy_test.rs
ui/: hotspot_hub.slint
